--- a/project/package.json
+++ b/project/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
